# erses

./: CMakeLists.txt  README.md
.github/workflows/: dunedaq-develop-cpp-ci.yml
cmake/: ersesConfig.cmake.in
docs/: README.md
src/: ESStream.cpp  ESStream.hpp
test/apps/: test.cxx
